Gat request only for books

--- a/test.ipynb
+++ b/test.ipynb
@@ -21,6 +21,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books_collection = conn.bgd.books\n",
+    "authors_collection = conn.bgd.authors"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -47,12 +57,12 @@
     }
    ],
    "source": [
-    "print(serializeDict(conn.bgd.books.find_one({\"_id\":ObjectId(\"62ab41648cb4962b2a76d730\")})))"
+    "print(serializeDict(books_collection.find_one({\"_id\":ObjectId(\"62ab41648cb4962b2a76d730\")})))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +74,24 @@
     }
    ],
    "source": [
-    "print(serializeDict(conn.bgd.authors.find_one({\"_id\":ObjectId(\"62ab41668cb4962b2a7702a8\")})))"
+    "print(serializeDict(authors_collection.find_one({\"_id\":ObjectId(\"62ab41668cb4962b2a7702a8\")})))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': '62ab41648cb4962b2a76d731', 'book_id': 2, 'title': 'Harry Potter and the Order of the Phoenix (Harry Potter  #5)', 'authors': ['J.K. Rowling', 'Mary GrandPré'], 'average_rating': 4.49, 'isbn': '0439358078', 'isbn13': '9780439358071', 'language_code': 'eng', 'num_pages': 870, 'ratings_count': 2153167, 'text_reviews_count': 29221, 'publication_date': datetime.datetime(2004, 8, 31, 22, 0), 'publisher': 'Scholastic Inc.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serializeDict(books_collection.find_one({\"title\":\"Harry Potter and the Order of the Phoenix (Harry Potter  #5)\"})))"
    ]
   }
  ],
